# chet

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  STATUS.md  deny.toml
.github/actions/setup-chet/: action.yml
.github/workflows/: ci.yml  release.yml
crates/chet-api/: Cargo.toml
crates/chet-api/src/: client.rs  lib.rs  provider.rs  retry.rs  sse.rs  stream.rs
crates/chet-api/tests/: retry_integration.rs  stream_integration.rs
crates/chet-bedrock/: Cargo.toml
crates/chet-bedrock/src/: eventstream.rs  lib.rs  provider.rs
crates/chet-cli/: Cargo.toml
crates/chet-cli/src/: commands.rs  context.rs  main.rs  plan.rs  prompt.rs  prompts.rs  repl.rs  runner.rs
crates/chet-cli/tests/: pipe_mode.rs
crates/chet-config/: Cargo.toml
crates/chet-config/src/: lib.rs
crates/chet-core/: Cargo.toml
crates/chet-core/src/: agent.rs  lib.rs  subagent.rs  util.rs  worktree.rs
crates/chet-core/tests/: cancellation_integration.rs
crates/chet-core/tests/common/: mod.rs
crates/chet-lsp/: Cargo.toml
crates/chet-lsp/src/: lib.rs
crates/chet-mcp/: Cargo.toml
crates/chet-mcp/src/: client.rs  config.rs  error.rs  jsonrpc.rs  lib.rs  manager.rs  tool.rs  transport.rs
crates/chet-mcp/tests/: mcp_e2e.rs
crates/chet-permissions/: Cargo.toml
crates/chet-permissions/src/: engine.rs  hooks.rs  lib.rs  matcher.rs  prompt.rs  types.rs
crates/chet-plugins/: Cargo.toml
crates/chet-plugins/src/: lib.rs
crates/chet-sandbox/: Cargo.toml
crates/chet-sandbox/src/: lib.rs
crates/chet-session/: Cargo.toml
crates/chet-session/src/: compact.rs  context.rs  error.rs  lib.rs  memory.rs  store.rs  types.rs
crates/chet-session/tests/: session_roundtrip.rs
crates/chet-terminal/: Cargo.toml
crates/chet-terminal/src/: buffer.rs  completion.rs  editor.rs  highlight.rs  history.rs  inline.rs  keys.rs  lib.rs  markdown.rs  render.rs  spinner.rs  statusline.rs  style.rs  table.rs
crates/chet-terminal/tests/: statusline_integration.rs
crates/chet-tools/: Cargo.toml
crates/chet-tools/src/: bash.rs  edit.rs  glob.rs  grep.rs  lib.rs  memory_read.rs  memory_write.rs  path_suggest.rs  read.rs  registry.rs  write.rs
crates/chet-types/: Cargo.toml
crates/chet-types/src/: auth.rs  error.rs  lib.rs  message.rs  provider.rs  sse.rs  tool.rs  util.rs
crates/chet-vertex/: Cargo.toml
crates/chet-vertex/src/: auth.rs  lib.rs  provider.rs
docs/: api.md
scripts/: install.sh
