[workspace]
resolver = "2"
members = [
    "crates/chet-cli",
    "crates/chet-core",
    "crates/chet-api",
    "crates/chet-tools",
    "crates/chet-permissions",
    "crates/chet-mcp",
    "crates/chet-plugins",
    "crates/chet-terminal",
    "crates/chet-config",
    "crates/chet-session",
    "crates/chet-lsp",
    "crates/chet-sandbox",
    "crates/chet-types",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Scott Johnson"]
license = "MIT"
rust-version = "1.85"
repository = "https://github.com/scottyj503/chet"

[workspace.dependencies]
# Shared types & errors
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP & networking
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }

# Time & IDs
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Terminal
crossterm = "0.28"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }

# Random (jitter for retry backoff)
rand = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Internal crates
chet-types = { path = "crates/chet-types", version = "0.1.0" }
chet-config = { path = "crates/chet-config", version = "0.1.0" }
chet-api = { path = "crates/chet-api", version = "0.1.0" }
chet-core = { path = "crates/chet-core", version = "0.1.0" }
chet-tools = { path = "crates/chet-tools", version = "0.1.0" }
chet-permissions = { path = "crates/chet-permissions", version = "0.1.0" }
chet-terminal = { path = "crates/chet-terminal", version = "0.1.0" }
chet-session = { path = "crates/chet-session", version = "0.1.0" }
chet-mcp = { path = "crates/chet-mcp", version = "0.1.0" }
chet-plugins = { path = "crates/chet-plugins", version = "0.1.0" }
chet-lsp = { path = "crates/chet-lsp", version = "0.1.0" }
chet-sandbox = { path = "crates/chet-sandbox", version = "0.1.0" }

[profile.release]
lto = true
codegen-units = 1
strip = true
