[package]
name = "chet-api"
description = "Anthropic Messages API client with SSE streaming for Chet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
chet-types = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
futures-core = "0.3"
pin-project-lite = "0.2"
bytes = "1"

[dev-dependencies]
tokio = { workspace = true }
futures-util = "0.3"
