[package]
name = "chet-bedrock"
description = "AWS Bedrock provider for Chet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
chet-types = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
futures-util = "0.3"
bytes = "1"

# AWS credential resolution (full chain: env, profile, IMDS, ECS, SSO, STS)
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"

# Manual SigV4 signing (lighter than aws-sigv4 crate)
sha2 = "0.10"
hmac = "0.12"

[dev-dependencies]
tempfile = "3"
