[package]
name = "chet-cli"
description = "CLI entry point and REPL for Chet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "chet"
path = "src/main.rs"

[dependencies]
chet-types = { workspace = true }
chet-config = { workspace = true }
chet-api = { workspace = true }
chet-core = { workspace = true }
chet-mcp = { workspace = true }
chet-permissions = { workspace = true }
chet-tools = { workspace = true }
chet-session = { workspace = true }
chet-terminal = { workspace = true }
chrono = { workspace = true }
crossterm = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
