[package]
name = "chet-config"
description = "Multi-tier TOML configuration for Chet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chet-api = { workspace = true }
chet-mcp = { workspace = true }
chet-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chet-permissions = { workspace = true }
dirs-next = "2"
