[package]
name = "chet-core"
description = "Agent loop orchestration and conversation management for Chet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chet-types = { workspace = true }
chet-api = { workspace = true }
chet-tools = { workspace = true }
chet-permissions = { workspace = true }
chet-session = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures-util = "0.3"
