[package]
name = "chet-tools"
description = "Tool trait and built-in tool implementations for Chet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
chet-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
globset = "0.4"
walkdir = "2"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"

[dev-dependencies]
tempfile = "3"
