[package]
name = "chet-vertex"
description = "Google Vertex AI provider for Chet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
chet-types = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
